# PrimitiveAnything

./: CLAUDE.md  primitive_web.py  pyproject.toml  tripo_test.py  tripo_web.py
primitive_anything/: primitive_transformer.py  pytorch3d_compat.py
primitive_anything/michelangelo/models/asl_diffusion/: asl_diffuser_pl_module.py  clip_asl_diffuser_pl_module.py
primitive_anything/michelangelo/models/tsal/: asl_pl_module.py  sal_pl_module.py
